[gd_scene load_steps=86 format=3 uid="uid://jx55wc0xyylt"]

[ext_resource type="Script" uid="uid://bw6ha80c1xul1" path="res://scripts/game.gd" id="1_rysoc"]
[ext_resource type="PackedScene" uid="uid://dvexq3a6trjln" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://bu6630sdsnl2e" path="res://assets/sprites/UI/Menus.bmp" id="2_ir15t"]
[ext_resource type="Texture2D" uid="uid://36cfiogx7i5k" path="res://assets/sprites/spacestationbackground.bmp" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://i2a17x23nmyc" path="res://scripts/machines.gd" id="3_0tnpc"]
[ext_resource type="PackedScene" uid="uid://cs0vv1xgxrogp" path="res://scenes/Machines/ame.tscn" id="3_lnu2h"]
[ext_resource type="Texture2D" uid="uid://cukqcq7xgphbw" path="res://assets/sprites/AME/AME_normal.bmp" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://dv3ociia7h54o" path="res://scenes/Machines/singulo.tscn" id="4_p57ef"]
[ext_resource type="PackedScene" uid="uid://ci6vnlpvygmta" path="res://scenes/Machines/solar.tscn" id="5_gee14"]
[ext_resource type="Texture2D" uid="uid://deqy3gonyx12k" path="res://assets/sprites/dot.png" id="5_pr1ej"]
[ext_resource type="Script" uid="uid://b5ovyix0ak7uh" path="res://scripts/music_control.gd" id="6_05nbr"]
[ext_resource type="Texture2D" uid="uid://drhfkrjj7guvg" path="res://assets/sprites/Singulo/singulo_normal.bmp" id="6_u5sy4"]
[ext_resource type="Texture2D" uid="uid://brmel64wbwjob" path="res://assets/sprites/AME/AME_warning.bmp" id="6_vtaks"]
[ext_resource type="Texture2D" uid="uid://wp1ggpm32std" path="res://assets/sprites/Solar/solar_normal.bmp" id="8_0tnpc"]
[ext_resource type="Texture2D" uid="uid://bya0eranmmmyv" path="res://assets/sprites/Singulo/singulo_warning.bmp" id="9_dinhu"]
[ext_resource type="Texture2D" uid="uid://bwntkk87jles0" path="res://assets/sprites/Solar/solar_warning.bmp" id="12_kvuet"]
[ext_resource type="PackedScene" uid="uid://bw7fx8h4qck4k" path="res://scenes/Machines/doors.tscn" id="13_trtic"]
[ext_resource type="Texture2D" uid="uid://dgojw2bbt0ien" path="res://assets/sprites/Doors/door_1.bmp" id="14_ir15t"]
[ext_resource type="FontFile" uid="uid://bn8cenhd3jlyg" path="res://assets/fonts/DepartureMono-Regular.otf" id="16_ca42v"]
[ext_resource type="PackedScene" uid="uid://n4fhyiony73y" path="res://scenes/Machines/food.tscn" id="17_264po"]
[ext_resource type="Texture2D" uid="uid://dqiekqcbbfg2f" path="res://assets/sprites/food_dispenser.bmp" id="18_1kice"]
[ext_resource type="AudioStream" uid="uid://dfqtbm7ehog0j" path="res://assets/sounds/multitool_pulse.ogg" id="19_1kice"]
[ext_resource type="AudioStream" uid="uid://gs3ol1upwrpa" path="res://assets/music/absconditus.ogg" id="21_8ool0"]
[ext_resource type="AudioStream" uid="uid://461yg8vhnf05" path="res://assets/music/atomicamnesiammx.ogg" id="22_pr1ej"]
[ext_resource type="AudioStream" uid="uid://j7x11daycmc2" path="res://assets/music/pwmur.ogg" id="23_05nbr"]
[ext_resource type="AudioStream" uid="uid://ccn4281gyjhi5" path="res://assets/music/sector11.ogg" id="24_0sl42"]
[ext_resource type="AudioStream" uid="uid://metif7dca4a7" path="res://assets/music/singuloose.ogg" id="25_oaba0"]
[ext_resource type="AudioStream" uid="uid://qid0r2k2m4ai" path="res://assets/music/space_asshole.ogg" id="26_458eo"]
[ext_resource type="AudioStream" uid="uid://cx24nyod2vytu" path="res://assets/music/Spac_Stac.ogg" id="27_h3rex"]
[ext_resource type="AudioStream" uid="uid://bq4vo48vajsrs" path="res://assets/music/starlight.ogg" id="28_fedci"]
[ext_resource type="AudioStream" uid="uid://c7wvi4jhjrerj" path="res://assets/music/sunset.ogg" id="29_8qswn"]
[ext_resource type="AudioStream" uid="uid://mugkjrfsxxqa" path="res://assets/music/the_wizard.ogg" id="30_rm0al"]
[ext_resource type="AudioStream" uid="uid://b6cexgp7yf3bp" path="res://assets/music/thunderdome.ogg" id="31_i4re6"]
[ext_resource type="AudioStream" uid="uid://cvq7fhpj6al38" path="res://assets/music/title2.ogg" id="32_pf7vy"]
[ext_resource type="AudioStream" uid="uid://2u7obg2bnv5s" path="res://assets/music/comet_haley.ogg" id="33_o8ni1"]
[ext_resource type="AudioStream" uid="uid://c7fy03vh3ptwo" path="res://assets/music/title3.ogg" id="34_3hbvx"]
[ext_resource type="AudioStream" uid="uid://qph4t66wu85p" path="res://assets/music/constellations.ogg" id="35_q8j3a"]
[ext_resource type="AudioStream" uid="uid://cx8lyiyb0ncrm" path="res://assets/music/drifting.ogg" id="36_ms3bu"]
[ext_resource type="AudioStream" uid="uid://cmimr6syumioe" path="res://assets/music/endless_space.ogg" id="37_7ixpq"]
[ext_resource type="AudioStream" uid="uid://yllxgililtqr" path="res://assets/music/every_light_is_blinking_at_once.ogg" id="38_bk1p3"]
[ext_resource type="AudioStream" uid="uid://cuhl11drsgay3" path="res://assets/music/flip-flap.ogg" id="39_n8ral"]
[ext_resource type="AudioStream" uid="uid://bwsipykpc6qb4" path="res://assets/music/lasers_rip_apart_the_bulkhead.ogg" id="40_yd4ix"]
[ext_resource type="AudioStream" uid="uid://t3qskycq8te4" path="res://assets/music/mod.flip-flap.ogg" id="41_66xif"]

[sub_resource type="AtlasTexture" id="AtlasTexture_264po"]
atlas = ExtResource("2_ir15t")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kice"]
atlas = ExtResource("2_ir15t")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5newe"]
atlas = ExtResource("2_ir15t")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_37s47"]
atlas = ExtResource("2_ir15t")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt5mj"]
atlas = ExtResource("2_ir15t")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1j6l"]
atlas = ExtResource("2_ir15t")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl11u"]
atlas = ExtResource("2_ir15t")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_bhx41"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_264po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kice")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5newe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37s47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt5mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1j6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl11u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ool0"]
draw_center = false

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ool0"]
color = Color(1, 1, 1, 1)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_pr1ej"]
color = Color(0, 0, 1, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05nbr"]
bg_color = Color(0.4117647, 0.41568628, 0.41568628, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 2
shadow_offset = Vector2(1, 1)
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05nbr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lnu2h"]
texture = ExtResource("2_yqjtg")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_uwrxv"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_lnu2h")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yqjtg"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lnu2h"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lbhrr"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_iywne"]
normal = Vector2(1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqjtg"]
size = Vector2(1024, 187)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca42v"]
atlas = ExtResource("14_ir15t")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rysoc"]
atlas = ExtResource("14_ir15t")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssvqc"]
atlas = ExtResource("14_ir15t")
region = Rect2(352, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_264po"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rysoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssvqc")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1kice"]
size = Vector2(254, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_5newe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rysoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssvqc")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37s47"]
size = Vector2(254, 256.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh5cr"]
atlas = ExtResource("4_lbhrr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd7uh"]
atlas = ExtResource("6_vtaks")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvpfn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh5cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd7uh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dinhu"]
size = Vector2(202, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq1i4"]
atlas = ExtResource("6_u5sy4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_583pg"]
atlas = ExtResource("9_dinhu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_trtic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq1i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_583pg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir15t"]
size = Vector2(208, 208)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5w87"]
atlas = ExtResource("8_0tnpc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ge3"]
atlas = ExtResource("12_kvuet")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ca42v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5w87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ge3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bhx41"]
atlas = ExtResource("18_1kice")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qnb83"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhx41")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sww3w"]
size = Vector2(208, 192)

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_bnuda"]
shuffle = true
stream_count = 21
stream_0 = ExtResource("21_8ool0")
stream_1 = ExtResource("22_pr1ej")
stream_2 = ExtResource("33_o8ni1")
stream_3 = ExtResource("35_q8j3a")
stream_4 = ExtResource("36_ms3bu")
stream_5 = ExtResource("37_7ixpq")
stream_6 = ExtResource("38_bk1p3")
stream_7 = ExtResource("39_n8ral")
stream_8 = ExtResource("40_yd4ix")
stream_9 = ExtResource("41_66xif")
stream_10 = ExtResource("23_05nbr")
stream_11 = ExtResource("24_0sl42")
stream_12 = ExtResource("25_oaba0")
stream_13 = ExtResource("26_458eo")
stream_14 = ExtResource("27_h3rex")
stream_15 = ExtResource("28_fedci")
stream_16 = ExtResource("29_8qswn")
stream_17 = ExtResource("30_rm0al")
stream_18 = ExtResource("31_i4re6")
stream_19 = ExtResource("32_pf7vy")
stream_20 = ExtResource("34_3hbvx")

[node name="Game" type="Node2D"]
script = ExtResource("1_rysoc")

[node name="Player" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(384, 888)

[node name="Menus" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 5
position = Vector2(512, 512)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_bhx41")

[node name="Options" type="Panel" parent="Menus"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -125.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ool0")

[node name="Options" type="Label" parent="Menus/Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -0.875
offset_bottom = 27.125
grow_horizontal = 2
theme_override_fonts/font = ExtResource("16_ca42v")
theme_override_font_sizes/font_size = 22
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music_Volume" type="Label" parent="Menus/Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 11.375
offset_top = 27.625
offset_right = -26.625
offset_bottom = 46.625
grow_horizontal = 2
theme_override_fonts/font = ExtResource("16_ca42v")
theme_override_font_sizes/font_size = 11
text = "Music volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music_Control" type="HSlider" parent="Menus/Options"]
layout_mode = 0
offset_left = 13.125
offset_top = 30.875
offset_right = 108.875
offset_bottom = 62.875
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("5_pr1ej")
theme_override_icons/grabber_highlight = ExtResource("5_pr1ej")
theme_override_styles/slider = SubResource("StyleBoxLine_8ool0")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_pr1ej")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_pr1ej")
max_value = 1.0
step = 0.05
value = 1.0
ticks_position = 3
script = ExtResource("6_05nbr")
Audio_Bus_Name = "Music"

[node name="Quit" type="Button" parent="Menus/Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.375
offset_top = -27.875
offset_right = 29.375
offset_bottom = -5.875
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("16_ca42v")
theme_override_font_sizes/font_size = 11
theme_override_styles/normal = SubResource("StyleBoxFlat_05nbr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_05nbr")
theme_override_styles/hover = SubResource("StyleBoxFlat_05nbr")
theme_override_styles/disabled = SubResource("StyleBoxFlat_05nbr")
theme_override_styles/focus = SubResource("StyleBoxFlat_05nbr")
text = "quit"

[node name="SFX" type="CheckButton" parent="Menus/Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -7.125
offset_right = 45.0
offset_bottom = 28.875
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("16_ca42v")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_05nbr")
button_pressed = true
text = "SFX"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_uwrxv")

[node name="Border" type="StaticBody2D" parent="."]

[node name="B_Bottom" type="CollisionShape2D" parent="Border"]
position = Vector2(97, 1025)
shape = SubResource("WorldBoundaryShape2D_yqjtg")

[node name="B_Top" type="CollisionShape2D" parent="Border"]
position = Vector2(950, -258.5)
shape = SubResource("WorldBoundaryShape2D_lnu2h")

[node name="B_Right" type="CollisionShape2D" parent="Border"]
position = Vector2(1025, 98)
shape = SubResource("WorldBoundaryShape2D_lbhrr")

[node name="B_Left" type="CollisionShape2D" parent="Border"]
position = Vector2(-1, 929)
shape = SubResource("WorldBoundaryShape2D_iywne")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(512, 512)
scale = Vector2(8, 8)
texture = ExtResource("2_yqjtg")

[node name="New_Round" type="Area2D" parent="."]

[node name="New_Round_Box" type="CollisionShape2D" parent="New_Round"]
position = Vector2(512, -163.5)
shape = SubResource("RectangleShape2D_yqjtg")

[node name="Machines" type="Node" parent="."]
script = ExtResource("3_0tnpc")

[node name="Doors" type="Node" parent="Machines"]

[node name="Door_1" parent="Machines/Doors" instance=ExtResource("13_trtic")]

[node name="Door_1_Sprite" type="AnimatedSprite2D" parent="Machines/Doors/Door_1"]
position = Vector2(128, 896)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_264po")

[node name="Door_1_collider" type="CollisionShape2D" parent="Machines/Doors/Door_1"]
position = Vector2(127, 896)
shape = SubResource("RectangleShape2D_1kice")

[node name="Door_2" parent="Machines/Doors" instance=ExtResource("13_trtic")]

[node name="Door_2_Sprite" type="AnimatedSprite2D" parent="Machines/Doors/Door_2"]
position = Vector2(896, 896)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_5newe")

[node name="Door_2_collider" type="CollisionShape2D" parent="Machines/Doors/Door_2"]
position = Vector2(897, 896.25)
shape = SubResource("RectangleShape2D_37s47")

[node name="AME" parent="Machines" instance=ExtResource("3_lnu2h")]
position = Vector2(128, 640)

[node name="AME_Sprite" type="AnimatedSprite2D" parent="Machines/AME"]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_kvpfn")

[node name="AME_Collider" type="CollisionShape2D" parent="Machines/AME"]
position = Vector2(-3, 0)
shape = SubResource("RectangleShape2D_dinhu")

[node name="Singulo" parent="Machines" instance=ExtResource("4_p57ef")]
position = Vector2(128, 384)

[node name="Singulo_Sprite" type="AnimatedSprite2D" parent="Machines/Singulo"]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_trtic")

[node name="Singulo_Collider" type="CollisionShape2D" parent="Machines/Singulo"]
shape = SubResource("RectangleShape2D_ir15t")

[node name="Solar" parent="Machines" instance=ExtResource("5_gee14")]
position = Vector2(128, 128)

[node name="Solar_Sprite" type="AnimatedSprite2D" parent="Machines/Solar"]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_ca42v")

[node name="Solar_Collider" type="CollisionPolygon2D" parent="Machines/Solar"]
polygon = PackedVector2Array(-112, -96, 48, -96, 64, -88, 128, 64, 120, 96, -40, 96, -56, 88, -120, -88)

[node name="Food" parent="Machines" instance=ExtResource("17_264po")]

[node name="Food_Sprite" type="AnimatedSprite2D" parent="Machines/Food"]
position = Vector2(896, 640)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_qnb83")

[node name="Food_Collider" type="CollisionShape2D" parent="Machines/Food"]
position = Vector2(912, 640)
shape = SubResource("RectangleShape2D_sww3w")

[node name="Multitool" type="AudioStreamPlayer2D" parent="Machines"]
stream = ExtResource("19_1kice")
volume_db = 5.0
bus = &"SFX"

[node name="Position_References" type="Node" parent="."]

[node name="AmeNormal" type="Sprite2D" parent="Position_References"]
visible = false
position = Vector2(512, 512)
scale = Vector2(8, 8)
texture = ExtResource("4_lbhrr")

[node name="SinguloNormal" type="Sprite2D" parent="Position_References"]
visible = false
position = Vector2(512, 512)
scale = Vector2(8, 8)
texture = ExtResource("6_u5sy4")

[node name="SolarNormal" type="Sprite2D" parent="Position_References"]
visible = false
position = Vector2(512, 512)
scale = Vector2(8, 8)
texture = ExtResource("8_0tnpc")

[node name="FoodDispenser" type="Sprite2D" parent="Position_References"]
visible = false
position = Vector2(512, 512)
scale = Vector2(8, 8)
texture = ExtResource("18_1kice")

[node name="Text" type="Node" parent="."]

[node name="Stats" type="Label" parent="Text"]
offset_left = 264.0
offset_right = 803.0
offset_bottom = 504.0
theme_override_fonts/font = ExtResource("16_ca42v")
theme_override_font_sizes/font_size = 97
text = "Score: 0
Hunger: 0
Income: 0
Round:0"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamPlaylist_bnuda")
bus = &"Music"

[connection signal="Game_Over" from="." to="Player" method="_on_game_game_over"]
[connection signal="Menu_Closed" from="." to="Player" method="_on_game_menu_closed"]
[connection signal="Menu_Open" from="." to="Player" method="_on_game_menu_open"]
[connection signal="moved" from="Player" to="." method="_on_player_moved"]
[connection signal="new_round" from="Player" to="." method="_on_player_new_round"]
[connection signal="new_round" from="Player" to="Machines" method="_on_new_round"]
[connection signal="scream_finished" from="Player" to="." method="_on_player_scream_finished"]
[connection signal="value_changed" from="Menus/Options/Music_Control" to="Menus/Options/Music_Control" method="_on_value_changed"]
[connection signal="pressed" from="Menus/Options/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="Menus/Options/SFX" to="." method="_on_sfx_toggled"]
[connection signal="body_entered" from="New_Round" to="Player" method="_on_new_round_body_entered"]
[connection signal="Broken" from="Machines" to="." method="_on_machines_broken"]
[connection signal="Eat" from="Machines" to="." method="_on_machines_eat"]
[connection signal="Fixed" from="Machines" to="." method="_on_machines_fixed"]
[connection signal="Menu_Closed" from="Machines" to="Player" method="_on_machines_menu_closed"]
[connection signal="Menu_Open" from="Machines" to="Player" method="_on_machines_menu_open"]
[connection signal="body_entered" from="Machines/Doors/Door_1" to="Machines" method="_on_door_1_body_entered"]
[connection signal="body_exited" from="Machines/Doors/Door_1" to="Machines" method="_on_door_1_body_exited"]
[connection signal="body_entered" from="Machines/Doors/Door_2" to="Machines" method="_on_door_2_body_entered"]
[connection signal="body_exited" from="Machines/Doors/Door_2" to="Machines" method="_on_door_2_body_exited"]
[connection signal="body_entered" from="Machines/AME" to="Machines" method="_on_ame_body_entered"]
[connection signal="body_exited" from="Machines/AME" to="Machines" method="_on_ame_body_exited"]
[connection signal="body_entered" from="Machines/Singulo" to="Machines" method="_on_singulo_body_entered"]
[connection signal="body_exited" from="Machines/Singulo" to="Machines" method="_on_singulo_body_exited"]
[connection signal="body_entered" from="Machines/Solar" to="Machines" method="_on_solar_body_entered"]
[connection signal="body_exited" from="Machines/Solar" to="Machines" method="_on_solar_body_exited"]
[connection signal="body_entered" from="Machines/Food" to="Machines" method="_on_food_body_entered"]
